Instalacion de las dependencias express, morgan, cors, y de helmet, y creando el archivo app.js

--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "tp4-ezequiel-romero",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node app.js"
   },
   "author": "Romero Ezequiel",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0"
+  }
 }
